# mcp-score

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  devbox.json  flake.nix  mise.toml  pyproject.toml
.claude/skills/midi-to-score/: SKILL.md
.claude/skills/score-generate/: SKILL.md
.claude/skills/score-generate/references/: instruments.md  template.py
.claude/skills/work-on-score/: SKILL.md
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  getting-started.md  musescore-plugin.md  reference.md
src/mcp_score/: __init__.py  app.py  cli.py  instruments.py  score_manager.py  server.py
src/mcp_score/bridge/: __init__.py  base.py  client.py  dorico.py  musescore.py  remote_control.py  sibelius.py
src/mcp_score/musescore/: plugin.qml  plugin_ms4.qml
src/mcp_score/tools/: __init__.py  analysis.py  connection.py  generation.py  manipulation.py
tests/: conftest.py  test_bridge.py  test_bridge_musescore.py  test_bridge_registry.py  test_cli.py  test_dorico_bridge.py  test_dorico_tools.py  test_generation.py  test_instruments.py  test_remote_control_bridge.py  test_score_manager.py  test_server.py  test_sibelius_bridge.py  test_sibelius_tools.py  test_tools.py
