[project]
name = "mcp-score"
version = "0.1.0"
description = "MCP server for AI-driven music score generation and manipulation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Thomas Skovlund Hansen" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Artistic Software",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0",
    "music21>=9.0",
    "websockets>=14.0",
]

[project.urls]
Homepage = "https://github.com/tskovlund/mcp-score"
Repository = "https://github.com/tskovlund/mcp-score"
Issues = "https://github.com/tskovlund/mcp-score/issues"
Documentation = "https://github.com/tskovlund/mcp-score/tree/main/docs"

[project.scripts]
mcp-score = "mcp_score.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_score"]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
