[project]
name = "mcp-score"
version = "0.1.0"
description = "MCP server for AI-driven music score generation and manipulation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Thomas Skovlund Hansen" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Artistic Software",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0,<2",
    "music21>=9.0,<10",
    "websockets>=14.0,<17",
]

[project.urls]
Homepage = "https://github.com/tskovlund/mcp-score"
Repository = "https://github.com/tskovlund/mcp-score"
Issues = "https://github.com/tskovlund/mcp-score/issues"
Documentation = "https://github.com/tskovlund/mcp-score/tree/main/docs"

[project.scripts]
mcp-score = "mcp_score.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_score"]

[tool.hatch.build.targets.wheel.force-include]
".claude/skills/score-generate" = "mcp_score/.claude/skills/score-generate"

[dependency-groups]
dev = [
    "hypothesis>=6.0,<7",
    "pyright>=1.1,<2",
    "pytest>=8.0,<10",
    "pytest-cov>=6.0,<8",
    "ruff>=0.15.0,<1",
]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "T20"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
